welcome.lessons.welcome.array.array667.Array667.scala.error
array667:15: error: type mismatch;
 found   : Unit
 required: Int
    while(indexOfValue(nums,6)==(-1)){
    ^